--- a/debian/control
+++ b/debian/control
@@ -1,21 +1,21 @@
-Source: python-litenc
+Source: litenc
 Section: python
 Priority: optional
-Maintainer: Vladimir Vassilev <vladimir@transpacket.com>
-Build-Depends: debhelper (>= 9),
-               python,
-               python-libxml2,
-               python-paramiko
-Standards-Version: 4.0.0
-
-Package: python-litenc
+Maintainer: Vladimir Vassilev <vladimir@lightside-instruments.com>
+Build-Depends: debhelper-compat (= 13),
+               dh-python,
+               python3-all,
+               python3-libxml2,
+               python3-paramiko,
+               python3-setuptools
+Standards-Version: 4.6.1
+Homepage: https://github.com/lightside-instruments/litenc/
+Package: python3-litenc
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-libxml2,
-         python-paramiko (>=1.7.7.1),
-         ${misc:Depends},
-         ${python:Depends}
-Recommends: ${python:Recommends}
+Depends: ${misc:Depends},
+         ${python3:Depends},
+Provides: ${python3:Provides},
+Recommends: ${python3:Recommends}
 Description: Python library for NETCONF clients
  litenc is a Python library that facilitates client-side scripting
  and application development around the NETCONF protocol.
