--- a/tntapi/debian/control
+++ b/tntapi/debian/control
@@ -5,15 +5,19 @@ Maintainer: Vladimir Vassilev <vladimir@lightside-instruments.com>
 Build-Depends: debhelper-compat (= 13),
                dh-python,
                python3-all,
+               python3-litenc,
+               python3-lxml,
+               python3-yuma (>=2.13),
                python3-setuptools
 Standards-Version: 4.6.1
 Homepage: https://github.com/lightside-instruments/litenc/
-Package: python3-litenc
+
+Package: python3-tntapi
 Architecture: all
 Depends: ${misc:Depends},
          ${python3:Depends},
-         python3-libxml2,
          python3-litenc,
+         python3-lxml,
          python3-yuma (>=2.13)
 Provides: ${python3:Provides},
 Recommends: ${python3:Recommends}
