Fixed issue with rfc2544-benchmark dependency on external traffic-generator-make-testframe tool

--- a/tntapi/example/ietf-network-interconnect-tester/debian/control
+++ b/tntapi/example/ietf-network-interconnect-tester/debian/control
@@ -15,7 +15,8 @@ Depends: ${misc:Depends},
          python3-lxml,
          python3-litenc,
          python3-tntapi,
-         python3-yuma (>=2.13)
+         python3-yuma (>=2.14),
+         traffic-generator-make-testframe
 Provides: ${python3:Provides},
 Recommends: ${python3:Recommends}
 Description: RFC254 benchmark implemented as python script based on the IETF
